--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,13 +1,9 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {B.S. in Computer Science and Engineering}
-    {POSTECH(Pohang University of Science and Technology)}
-    {Pohang, S.Korea}
-    {Mar. 2010 - PRESENT}
-    {
-      \begin{cvitems}
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
+    {B.S. in Statistics, minor in mathematics}
+    {University of Tennessee}
+    {Knoxville, TN}
+    {2013-2017}
+    {}
 \end{cventries}
