--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -1,8 +1,8 @@
-\cvsection{Extracurricular Activity}
+\cvsection{Extracurriculars}
 \begin{cventries}
   \cventry
-    {Core Member \& President at 2013}
-    {PoApper (Developers' Network of POSTECH)}
+    {Founder}
+    {University of Tennessee Machine Learning}
     {Pohang, S.Korea}
     {Jun. 2010 - PRESENT}
     {
