--- a/resume.tex
+++ b/resume.tex
@@ -84,9 +84,10 @@
 \import{\sectiondir}{education.tex}
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{extracurricular.tex}
-\import{\sectiondir}{honors.tex}
-\import{\sectiondir}{presentation.tex}
-\import{\sectiondir}{writing.tex}
-\import{\sectiondir}{committees.tex}
+\import{\sectiondir}{publications.tex}
+%\import{\sectiondir}{honors.tex}
+%\import{\sectiondir}{presentation.tex}
+%\import{\sectiondir}{writing.tex}
+%\import{\sectiondir}{committees.tex}
 
 \end{document}
