--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -154,21 +154,21 @@
 
 % Awesome section color
 \newcounter{colorCounter}
-\def\@sectioncolor#1#2#3{%
-  {%
-    \color{%
-      \ifcase\value{colorCounter}%
-        awesome\or%
-        awesome\or%
-        awesome\or%
-        awesome\or%
-        awesome\else%
-        awesome\fi%
-    } #1#2#3%
-  }%
-  \stepcounter{colorCounter}%
-}
-
+\def\@sectioncolor{\color{awesome}}
+%\def\@sectioncolor#1#2#3{%
+%  {%
+%    \color{%
+%      \ifcase\value{colorCounter}%
+%        awesome\or%
+%        awesome\or%
+%        awesome\or%
+%        awesome\or%
+%        awesome\else%
+%        awesome\fi%
+%    } %#1#2#3%
+%  }%
+%  \stepcounter{colorCounter}%
+%}
 
 %-------------------------------------------------------------------------------
 %                Configuration for fonts
