--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -2,37 +2,23 @@
 \begin{cventries}
   \cventry
     {Founder}
-    {University of Tennessee Machine Learning}
-    {Pohang, S.Korea}
-    {Jun. 2010 - PRESENT}
+    {University of Tennessee Machine Learning Student Organization}
+    {Knoxville, TN}
+    {2016 - Present}
     {
       \begin{cvitems}
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
+        \item {Organized Kaggle competitions and hackathons.}
+        \item {Presented machine learning methods through talks and demonstrations during biweekly meetings.}
       \end{cvitems}
     }
   \cventry
     {Member}
-    {PLUS (Laboratory for UNIX Security in POSTECH)}
-    {Pohang, S.Korea}
-    {Sep. 2010 - Oct. 2011}
+    {American Sign Language Student Organization}
+    {Knoxville, TN}
+    {2013 - 2015}
     {
       \begin{cvitems}
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
-  \cventry
-    {Member}
-    {MSSA (Management Strategy Club of POSTECH)}
-    {Pohang, S.Korea}
-    {Sep. 2013 - PRESENT}
-    {
-      \begin{cvitems}
-        \item {Gained knowledge about several business field like Management, Strategy, Financial and marketing from group study.}
-        \item {Gained expertise in business strategy areas and inisght for various industry from weekly industry analysis session.}
+        \item {Organized and performed interactive deaf theater in collaboration with the Tennessee School for the Deaf.}
       \end{cvitems}
     }
 \end{cventries}
