Adding bibtex support

--- a/resume.tex
+++ b/resume.tex
@@ -75,6 +75,11 @@
   {\today}
   {M. Todd Young~~~·~~~curriculum vitae}
   {\thepage}
+  
+%-------------------------------------------------------------------------------
+%	BIBLIOGRAPHY
+%-------------------------------------------------------------------------------
+\addbibresource{resume/references.bib}
 
 \begin{document}
 %%% Make a header for CV with personal data
