--- a/resume/publications.tex
+++ b/resume/publications.tex
@@ -1,29 +1,19 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
 \cvsection{Publications}
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
 \cvsubsection{Journal Articles}
 \begin{refsection}
-	\nocite{Khan2014Incentive}
-	\nocite{Selimi2015Cloud}
+	\nocite{Bhomik2018Clustering}
+	\nocite{Gao2017HAN}
 	
 	\printbibliography[
 	heading=none, 
-	sorting=ydnt
 	]
 \end{refsection}
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
+
 \cvsubsection{Conference Proceedings}
 \begin{refsection}
-    \nocite{Khan2014Prototyping}
+    \nocite{Young2018Hyperspace}
 	
 	\printbibliography[
 	heading=none, 
-	sorting=ydnt
 	]
 \end{refsection}
