--- a/resume/references.bib
+++ b/resume/references.bib
@@ -1,42 +1,33 @@
-%-------------------------------------------------------------------------------
-%	REPLACE WITH YOUR PUBLICATIONS
-%-------------------------------------------------------------------------------
-@Article{Khan2014Incentive,
-  author =  {Khan, Amin M and B{\"{u}}y{\"{u}}ksahin, {\"{U}}mit C. and Freitag, Felix},
-  title =   {{Incentive-based resource assignment and regulation for collaborative cloud services in community networks}},
-  journal = {Journal of Computer and System Sciences},
-  year =    {2015},
-  volume =  {81},
-  number =  {8},
-  pages =   {1479--1495},
-  month =   dec,
-  doi =     {10.1016/j.jcss.2014.12.023},
-  issn =    {00220000},
-  url =     {http://www.sciencedirect.com/science/article/pii/S0022000014001871 http://linkinghub.elsevier.com/retrieve/pii/S0022000014001871}
+@InProceedings{Young2018Hyperspace,
+  author =    {Todd Young, M. and Hinkle, Jacob and Kannan, Ramakrishnan and Ramanathan, Arvind},
+  title =     {HyperSpace: Distributed Bayesian Hyperparameter Optimization},
+  booktitle = {High Performance Machine Learning Workshop},
+  year =      {2018},
+  pages =     {},
+  address =   {},
+  month =     {},
+  publisher = {IEEE Xplore},
+  doi =       {},
+  isbn =      {},
+  url =       {}
 }
-@Article{Selimi2015Cloud,
-  author =  {Selimi, Mennan and Khan, Amin M and Dimogerontakis, Emmanouil and Freitag, Felix and Centelles, Roger Pueyo},
-  title =   {{Cloud services in the Guifi.net community network}},
-  journal = {Computer Networks},
-  year =    {2015},
-  volume =  {93},
-  number =  {P2},
-  pages =   {373--388},
-  month =   dec,
-  doi =     {10.1016/j.comnet.2015.09.007},
-  issn =    {13891286},
-  url =     {http://linkinghub.elsevier.com/retrieve/pii/S1389128615003175}
+
+@Article{Bhomik2018Clustering,
+  author = {Bhowmik, Debsindhu and Todd Young, M. and Gao, Shang and Ramanathan, Arvind},
+  title = {Deep Clustering of Protein Folding Simulations},
+  journal = {BMC Bioinformatics},
+  year = {2018},
+  month = {06},
+  pages = {},
+  doi = {10.1101/339879}
 }
-@InProceedings{Khan2014Prototyping,
-  author =    {Khan, Amin M and Buyuksahin, Umit Cavus and Freitag, Felix},
-  title =     {{Prototyping Incentive-Based Resource Assignment for Clouds in Community Networks}},
-  booktitle = {28th IEEE International Conference on Advanced Information Networking and Applications (AINA 2014)},
-  year =      {2014},
-  pages =     {719--726},
-  address =   {Victoria, Canada},
-  month =     may,
-  publisher = {IEEE},
-  doi =       {10.1109/AINA.2014.88},
-  isbn =      {978-1-4799-3630-4},
-  url =       {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6838735}
+@Article{Gao2017HAN,
+  author = {Gao, Shang and Todd Young, M. and X Qiu, John and Yoon, Hong-Jun and B Christian, James and A Fearn, Paul and Tourassi, Georgia and Ramanathan, Arvind},
+  title = {Hierarchical attention networks for information extraction from cancer pathology reports},
+  journal = {Journal of the American Medical Informatics Association : JAMIA},
+  year = {2017},
+  month = {11},
+  pages = {},
+  volume = {25},
+  doi = {10.1093/jamia/ocx131}
 }
