--- a/resume/references.bib
+++ b/resume/references.bib
@@ -1,5 +1,5 @@
 @InProceedings{Young2018Hyperspace,
-  author =    {Todd Young, M. and Hinkle, Jacob and Kannan, Ramakrishnan and Ramanathan, Arvind},
+  author =    {\textbf{Todd Young, M.} and Hinkle, Jacob and Kannan, Ramakrishnan and Ramanathan, Arvind},
   title =     {HyperSpace: Distributed Bayesian Hyperparameter Optimization},
   booktitle = {High Performance Machine Learning Workshop},
   year =      {2018},
@@ -12,7 +12,7 @@
   url =       {}
 }
 @Article{Bhomik2018Clustering,
-  author = {Bhowmik, Debsindhu and Todd Young, M. and Gao, Shang and Ramanathan, Arvind},
+  author = {Bhowmik, Debsindhu and \textbf{Todd Young, M.} and Gao, Shang and Ramanathan, Arvind},
   title = {Deep Clustering of Protein Folding Simulations},
   journal = {BMC Bioinformatics},
   year = {2018},
@@ -21,7 +21,7 @@
   doi = {10.1101/339879}
 }
 @Article{Gao2017HAN,
-  author = {Gao, Shang and Todd Young, M. and X Qiu, John and Yoon, Hong-Jun and B Christian, James and A Fearn, Paul and Tourassi, Georgia and Ramanathan, Arvind},
+  author = {Gao, Shang and \textbf{Todd Young, M.} and X Qiu, John and Yoon, Hong-Jun and B Christian, James and A Fearn, Paul and Tourassi, Georgia and Ramanathan, Arvind},
   title = {Hierarchical attention networks for information extraction from cancer pathology reports},
   journal = {Journal of the American Medical Informatics Association : JAMIA},
   year = {2017},
