--- a/resume/references.bib
+++ b/resume/references.bib
@@ -12,13 +12,13 @@
   url =       {}
 }
 @Article{Bhomik2018Clustering,
-  author = {Bhowmik, Debsindhu and \textbf{M. Todd Young} and Gao, Shang and Ramanathan, Arvind},
+  author = {Bhowmik, Debsindhu and Gao, Shang and \textbf{Michael T. Young} and and Ramanathan, Arvind},
   title = {Deep Clustering of Protein Folding Simulations},
   journal = {BMC Bioinformatics},
   year = {2018},
   month = {06},
   pages = {},
-  doi = {10.1101/339879}
+  doi = {10.1186/s12859-018-2507-5}
 }
 @Article{Gao2017HAN,
   author = {Gao, Shang and \textbf{M. Todd Young} and X Qiu, John and Yoon, Hong-Jun and B Christian, James and A Fearn, Paul and Tourassi, Georgia and Ramanathan, Arvind},
